--- a/source/css/_custom/custom.styl
+++ b/source/css/_custom/custom.styl
@@ -1,1 +1,9 @@
 // Custom styles.
+body {
+    background: url(/images/background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;      
+    background-position: 50% 50%;
+}
+
